update command for economy